--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2   # ✅ This is correct for Pages deployment
+        uses: actions/upload-pages-artifact@v2   # ✅ Correct for GitHub Pages
         with:
-          path: .
+          path: .   # Upload entire repo (or specify folder like 'dist')
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
